fixed z-index position of header

--- a/FiveForTheFuture.css
+++ b/FiveForTheFuture.css
@@ -26,8 +26,10 @@ a {
   }
   #dropdown {
 	position: relative;
+	z-index: 2;
   }
   #dropdown-menu {
+	position: relative;
 	background-color: #1c2024;
 	border-radius: 4px;
 	position: absolute;
@@ -40,6 +42,7 @@ a {
 	transform: translateY(-10px);
 	transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
 	pointer-events: none;
+	z-index: 3;
   }
   #dropdown-menu li {
 	padding: 16px 0;
@@ -608,7 +611,6 @@ a {
     background-color: #0d81b6;
     transform: skew(-20deg); 
     left: 22%; 
-    z-index: 1;
     height: 200px;
     width: 32%;
     position: absolute;
@@ -620,7 +622,6 @@ a {
     background-color: #6f57ab;
     transform: skew(-20deg); 
     left: 53%;
-    z-index: 2; 
     height: 200px;
     width: 32%;
     position: absolute;
